# aeronet_to_parquet

./: README.md  aeronet_to_parquet.py  pyproject.toml
